fixing spacing and layout of card

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.vercel.com/css2?family=geist');
+/* @import url('https://fonts.vercel.com/css2?family=geist'); */
 
 .header {
     margin-top: 25%;
@@ -12,13 +12,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* blueprint lines
+/* blueprint lines 
 div {
     outline: 1px;
     outline-style: dashed;
     outline-color: blue;
-} */
-
+} 
+    */
 
 button {
     padding-top: 5%;
@@ -33,17 +33,16 @@ a {
     font-size: 12px;
 }
 
+
 .content {
     color: white;
-    position: fixed; 
-    top: 100%;
+    opacity: 0%;
+    border-radius: 10px;
+    top: 110%;
     overflow-y: auto;
     max-height: calc(100vh - 100px);
     height: fit-content;
-    max-width: 720px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    opacity: 0%;
     transition: opacity 0.5s ease-in-out;
     transition: background-color 0.5s ease;
 }
@@ -69,39 +68,31 @@ a {
     font-size: smaller;
 }
 
-.techStackGrid {
-    display: grid;
-    justify-items: end;
-    grid-template-columns: repeat(auto-fit, auto);
-}
-
 .icon {
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
-    margin-right: 5px;
+    z-index: 1;
 }
 
 @keyframes slideUp {
     0% {
-        top: 100%;
+        top: 110%;
         opacity: 0;
     }
     100% {
-        top: 65px;
+        top: 75px;
         opacity: 1;
     }
 }
 
 @keyframes slideDown {
     0% {
-        /*bottom: 0%;*/
-        top: 50px;
+        top: 75px;
         opacity: 1;
     }
     100% {
-        /*bottom: -100%;*/
-        top: 100%;
+        top: 110%;
         opacity: 0;
     }
 }
